src/css/index.css
@import "reset.css";
@import "dialog.css";

body {
  padding: 40px;
  font-family: 'Roboto', system-ui, sans-serif;
}

h1 {
  font-weight: 800;
  font-size: 2rem;
  line-height: 1;
  padding-bottom: 40px;
}

#content {
  display: flex;
  gap: 20px;
  align-items: flex-start;
}

.project,
#new-project-btn {
  background-color: rgb(217, 217, 217);
  padding: 15px;
  width: 350px;
  min-width: 350px;
}
.project {
  position: relative;
  padding-bottom: 5px;

  h2 {
    padding-right: 15px; /* compensate for menu icon */
    padding-bottom: 15px;
    .progress {
      margin-left: 15px;
      font-size: 1rem;
      font-weight: 500;
      overflow-wrap: normal; /* don't wrap text */
    }
  }
  .no-todos {
    font-size: 0.85rem;
    color: rgb(85, 85, 85);
  }

  .new-project-todo-btn {
    width: 100%;
    margin-top: 15px;
    font-size: 30px;
    color: rgb(104, 104, 104);
  }
}

#new-project-btn {
  font-size: 1.3rem;
  font-weight: 600;
  text-align: left;
  display: flex;
  align-items: center;
  gap: 10px;
  /* plus icon */
  iconify-icon {
    color: rgb(104, 104, 104);
    font-size: 30px;
  }
}

.todo {
  position: relative;
  background-color: rgb(255, 255, 255);
  padding: 10px 15px;
  display: grid;
  grid-template-columns: 20px auto;
  gap: 15px;

  + .todo {
    margin-top: 10px;
  }

  /* checkbox */
  .pretty .state label:before {
    border-color: rgb(104, 104, 104);
  }
  .pretty .state label:before,
  .pretty .state label:after {
    border-width: 2px;
  }
  .pretty input:checked~.state .svg {
    color: #fff;
  }
  .pretty input:checked~.state label:after,
  .pretty.p-toggle .state label:after {
    background-color: rgb(104, 104, 104);
  }
  /* correct checkbox position */
  .pretty .state label:before,
  .pretty .state label:after,
  .pretty.p-svg .state .svg {
    top: 20px;
  }

  .todo-info {
    h3 {
      word-break: break-all;
      padding-right: 10px; /* compensate for menu icon */
      font-weight: 500;
      font-size: 1rem;
    }
    .todo-dueDate,
    .todo-priority {
      display: inline-block;
      line-height: 1;
    }
    .todo-dueDate {
      font-size: 0.85rem;
      &:not(:empty) {
        margin-right: 15px;
      }
    }
    .todo-priority {
      font-size: 0.8rem;
      border: 2px solid;
      border-radius: 50px;
      padding: 2px 10px;
      &.priority-Low {
        border-color: rgb(113, 193, 74);
      }
      &.priority-Medium {
        border-color: rgb(248, 161, 80);
      }
      &.priority-High {
        border-color: rgb(232, 86, 86);
      }
    }
    .todo-desc {
      font-size: 0.75rem;
      line-height: 1.3;
      &:not(:empty) {
        margin-top: 5px;
      }
    }
  }

  &.complete {
    background-color: rgba(255, 255, 255, 0.8);
    color: rgb(104, 104, 104);
    h3 {
      text-decoration: line-through;
    }
  }
}

.menu-container {
  position: absolute;
  top: 0;
  right: 0;
}
.menu-btn {
  color: rgb(104, 104, 104);
}
.project > .menu-container {
  .menu-btn {
    font-size: 1.5rem;
    margin-top: 15px;
    margin-right: 5px;
  }
  .menu-popup {
    font-size: 0.8rem;
    padding: 5px;
    gap: 10px;
  }
}
.todo > .menu-container {
  .menu-btn {
    font-size: 24px;
    margin-top: 10px;
    margin-right: 3px;
  }
  .menu-popup {
    font-size: 0.75rem;
    padding: 3px;
    gap: 5px;
  }
}

.menu-popup {
  display: grid;
  justify-items: start;
}

#new-todo-btn {
  z-index: 1000;
  position: absolute;
  bottom: 40px;
  right: 40px;
  font-size: 40px;
  color: rgb(104, 104, 104);
  background-color: rgb(217, 217, 217);
  border-radius: 50%;
  width: 80px;
  height: 80px;
  display: flex;
  align-items: center;
  justify-content: center;
}

